indentation-c-style: Fix logic error from e27cade3ec1ce883182ff1b99637d781ae6b128c

We should stop the loop when the number of left braces are more than or equal to the number
of right braces.

https://bugzilla.gnome.org/show_bug.cgi?id=688610